--- a/src/schema/meta/context.yaml
+++ b/src/schema/meta/context.yaml
@@ -259,6 +259,15 @@ properties:
             type: array
             items:
               type: string
+      electrodes:
+        description: 'Electrodes file'
+        type: object
+        required: [path]
+        additionalProperties: false
+        properties:
+          path:
+            description: 'Path to associated electrodes.tsv file'
+            type: string
       coordsystem:
         description: 'Coordinate system file'
         type: object
