Downgrade absence of sub- folders to warning
I could be wrong but I think there is no strict and agreed upon requirement to
require having sub- subfolders in BIDS specification. Although odd, thus
warranting a warning, I think it is not strictly forbidden, and e.g. a BIDS
dataset only with stimuli/ or derivatives/ or sourcedata might still be well
legit BIDS dataset.

--- a/src/schema/rules/checks/dataset.yaml
+++ b/src/schema/rules/checks/dataset.yaml
@@ -7,7 +7,7 @@ SubjectFolders:
     code: SUBJECT_FOLDERS
     message: |
       There are no subject directories (labeled "sub-*") in the root of this dataset.
-    level: error
+    level: warning
   selectors:
     - path == '/dataset_description.json'
   checks:
