--- a/src/schema/rules/checks/func.yaml
+++ b/src/schema/rules/checks/func.yaml
@@ -94,18 +94,18 @@ VolumeTimingRepetitionTimeMutex:
   checks:
     - type(sidecar.RepetitionTime) == "null"
 
-RepetitionTimeAcquisitionDurationMutex:
+RepetitionTimeFrameAcquisitionDurationMutex:
   issue:
     code: REPETITION_TIME_AND_ACQUISITION_DURATION_MUTUALLY_EXCLUSIVE
     message: |
-      The fields 'RepetitionTime' and 'AcquisitionDuration' for this file are mutually exclusive.
+      The fields 'RepetitionTime' and 'FrameAcquisitionDuration' for this file are mutually exclusive.
       To specify acquisition duration, use 'SliceTiming' or 'DelayTime'
-      (RepetitionTime - AcquisitionDuration).
+      (RepetitionTime - FrameAcquisitionDuration).
     level: error
   selectors:
     - type(nifti_header) != "null"
     - intersects([suffix], ["asl", "bold"])
-    - type(sidecar.AcquisitionDuration) != "null"
+    - type(sidecar.FrameAcquisitionDuration) != "null"
   checks:
     - type(sidecar.RepetitionTime) == "null"
 
@@ -114,7 +114,7 @@ VolumeTimingDelayTimeMutex:
     code: VOLUME_TIMING_AND_DELAY_TIME_MUTUALLY_EXCLUSIVE
     message: |
       The fields 'VolumeTiming' and 'DelayTime' for this file are mutually exclusive.
-      To specify acquisition duration, use 'AcquisitionDuration' or 'SliceTiming'.
+      To specify acquisition duration, use 'FrameAcquisitionDuration' or 'SliceTiming'.
     level: error
   selectors:
     - type(nifti_header) != "null"
@@ -123,15 +123,15 @@ VolumeTimingDelayTimeMutex:
   checks:
     - type(sidecar.DelayTime) == "null"
 
-VolumeTimingMissingAcquisitionDuration:
+VolumeTimingMissingFrameAcquisitionDuration:
   issue:
     code: VOLUME_TIMING_MISSING_ACQUISITION_DURATION
     message: |
-      The field 'VolumeTiming' requires 'AcquisitionDuration' or 'SliceTiming' to be defined.
+      The field 'VolumeTiming' requires 'FrameAcquisitionDuration' or 'SliceTiming' to be defined.
     level: error
   selectors:
     - type(nifti_header) != "null"
     - intersects([suffix], ["asl", "bold"])
     - type(sidecar.VolumeTiming) != "null"
   checks:
-    - '"SliceTiming" in sidecar || "AcquisitionDuration" in sidecar'
+    - '"SliceTiming" in sidecar || "FrameAcquisitionDuration" in sidecar'
