Make AcquisitionDuration optional for all MRI images

--- a/src/schema/rules/sidecars/mri.yaml
+++ b/src/schema/rules/sidecars/mri.yaml
@@ -239,6 +239,7 @@ MRITimingParameters:
         or variable echo time fMRI sequences.
     InversionTime: recommended
     DwellTime: recommended
+    AcquisitionDuration: optional
 
 EchoTimeRequiredASL:
   selectors:
