BEP 042: Electromyography (EMG)
Co-authored-by: Seyed (Yahya) Shirazi <shirazi@ieee.org>
Co-authored-by: Jörn M. Horschig <joern@horschig.de>
Co-authored-by: Chris Markiewicz <effigies@gmail.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/src/schema/meta/associations.yaml
+++ b/src/schema/meta/associations.yaml
@@ -75,7 +75,7 @@ bvec:
 
 channels:
   selectors:
-    - intersects([suffix], ['eeg', 'ieeg', 'meg', 'nirs', 'motion', 'optodes'])
+    - intersects([suffix], ['eeg', 'emg', 'ieeg', 'meg', 'nirs', 'motion', 'optodes'])
     - extension != '.json'
   target:
     suffix: channels
@@ -93,11 +93,23 @@ coordsystem:
 
 electrodes:
   selectors:
-    - intersects([suffix], ['eeg', 'ieeg', 'meg'])
+    - intersects([suffix], ['eeg', 'emg', 'ieeg', 'meg'])
     - extension != '.json'
   target:
     suffix: electrodes
     extension: .tsv
+    entities:
+      - space
+  inherit: true
+
+coordsystems:
+  selectors:
+    - datatype == 'emg'
+    - intersects([suffix], ['emg', 'electrodes'])
+    - extension != '.json'
+  target:
+    suffix: coordsystem
+    extension: .json
     entities:
       - space
   inherit: true
