--- a/src/schema/rules/checks/channels.yaml
+++ b/src/schema/rules/checks/channels.yaml
@@ -42,5 +42,6 @@ RequiredCoordsystem:
   selectors:
     - suffix == "electrodes"
     - extension == ".tsv"
+    - datatype != "emg"  # coordsys file may have space entity that electrodes.tsv lacks
   checks:
-    - associations.coordsystem != null
+    - associations.coordsystem != null || associations.coordsystems != null
