--- a/src/schema/rules/files/raw/photo.yaml
+++ b/src/schema/rules/files/raw/photo.yaml
@@ -16,6 +16,14 @@ photo:
     session: optional
     acquisition: optional
 
+photo__emg:
+  $ref: rules.files.raw.photo.photo
+  datatypes:
+    - emg
+  entities:
+    $ref: rules.files.raw.photo.photo.entities
+    recording: optional
+
 photo__micr:
   $ref: rules.files.raw.photo.photo
   extensions:
