--- a/src/schema/meta/context.yaml
+++ b/src/schema/meta/context.yaml
@@ -269,7 +269,7 @@ properties:
             description: 'Path to associated electrodes.tsv file'
             type: string
       coordsystem:
-        description: 'Coordinate system file'
+        description: 'Coordinate system file (first found)'
         type: object
         required: [path]
         additionalProperties: false
@@ -277,6 +277,27 @@ properties:
           path:
             description: 'Path to associated coordsystem file'
             type: string
+      coordsystems:
+        description: 'Coordinate system files (all)'
+        type: object
+        required: [paths, spaces, ParentCoordinateSystems]
+        additionalProperties: false
+        properties:
+          paths:
+            description: 'Paths to associated coordsystem files'
+            type: array
+            items:
+              type: string
+          spaces:
+            description: 'Space entity labels extracted from file names'
+            type: array
+            items:
+              type: string
+          ParentCoordinateSystems:
+            description: 'ParentCoordinateSystem fields loaded from files'
+            type: array
+            items:
+              type: string
   # The following properties are populated if the current file is of an appropriate type
   columns:
     description: 'TSV columns, indexed by column header, values are arrays with column contents'
