--- a/src/schema/rules/files/raw/channels.yaml
+++ b/src/schema/rules/files/raw/channels.yaml
@@ -16,6 +16,15 @@ channels:
     acquisition: optional
     run: optional
 
+# emg may have a `recording` entity
+channels__emg:
+  $ref: rules.files.raw.channels.channels
+  datatypes:
+    - emg
+  entities:
+    $ref: rules.files.raw.channels.channels.entities
+    recording: optional
+
 # MEG has an additional entity available
 channels__meg:
   $ref: rules.files.raw.channels.channels
@@ -58,30 +67,56 @@ coordsystem__eeg:
     $ref: rules.files.raw.channels.coordsystem.entities
     space: optional
 
+# emg may have a `recording` entity
+coordsystem__emg:
+  $ref: rules.files.raw.channels.coordsystem__eeg
+  datatypes:
+    - emg
+  entities:
+    $ref: rules.files.raw.channels.coordsystem__eeg.entities
+    recording: optional
+    space: optional
+
 electrodes:
   suffixes:
     - electrodes
   extensions:
     - .json
     - .tsv
-  datatypes:
-    - eeg
-    - ieeg
+  datatypes: []
   entities:
     subject: required
     session: optional
     task: optional
     acquisition: optional
     run: optional
+
+# EMG can have `recording` entity (for multiple simultaneous devices)
+electrodes__emg:
+  $ref: rules.files.raw.channels.electrodes
+  datatypes:
+    - emg
+  entities:
+    $ref: rules.files.raw.channels.electrodes.entities
+    recording: optional
+
+ # (i)EEG can have `space` entity
+electrodes__eeg:
+  $ref: rules.files.raw.channels.electrodes
+  datatypes:
+    - eeg
+    - ieeg
+  entities:
+    $ref: rules.files.raw.channels.electrodes.entities
     space: optional
 
-# MEG has an additional entity available
+# MEG can have `space` (like EEG) and also `processing`
 electrodes__meg:
-  $ref: rules.files.raw.channels.electrodes
+  $ref: rules.files.raw.channels.electrodes__eeg
   datatypes:
     - meg
   entities:
-    $ref: rules.files.raw.channels.electrodes.entities
+    $ref: rules.files.raw.channels.electrodes__eeg.entities
     processing: optional
 
 optodes:
