--- a/src/schema/objects/formats.yaml
+++ b/src/schema/objects/formats.yaml
@@ -69,10 +69,24 @@ date:
 datetime:
   display_name: Datetime
   description: |
-    A datetime in the form `"YYYY-MM-DDThh:mm:ss[.000000][Z]"`,
-    where [.000000] is an optional subsecond resolution between 1 and 6 decimal points,
-    and [Z] is an optional, valid timezone code.
-  pattern: '[0-9]{4}-[0-9]{2}-[0-9]{2}T(?:2[0-3]|[01][0-9]):[0-5][0-9]:[0-5][0-9](\.[0-9]{1,6})?([A-Z]{2,4})?'
+    An [RFC 3339](https://doi.org/10.17487/RFC3339) timestamp, with OPTIONAL time offset.
+    Datetimes take the form `"YYYY-MM-DDThh:mm:ss[.000000][Z|+hh:mm|-hh:mm]"`,
+    where `[.000000]` is an OPTIONAL subsecond resolution between 1 and 6 decimal points,
+    and `[Z|+hh:mm|-hh:mm]` is a time offset.
+    The character `Z` indicates Coordinated Universal Time (UTC),
+    or else an integral number of minutes may be specified.
+
+    For simplicity, this format validates RFC3339-invalid dates such as 2024-02-31,
+    but implementations SHOULD error on non-existent dates and times.
+  pattern: "\
+    [0-9]{4}\
+    -(?:0[1-9]|1[0-2])\
+    -(?:0[1-9]|[12][0-9]|3[01])\
+    T(?:2[0-3]|[01][0-9])\
+    :[0-5][0-9]\
+    :(?:[0-5][0-9]|60)\
+    (?:\\.[0-9]{1,6})?\
+    (?:Z|[+-](?:2[0-3]|[01][0-9]):[0-5][0-9])?"
 file_relative:
   display_name: Path relative to the parent file
   description: |
