Revise the extensions

--- a/src/schema/rules/files/raw/video.yaml
+++ b/src/schema/rules/files/raw/video.yaml
@@ -1,7 +1,8 @@
 ---
-suffixes:
-  video:
-    extensions:
+video:
+  suffixes:
+    - video
+  extensions:
       - .avi
       - .AVI
       - .mp4
@@ -10,3 +11,7 @@ suffixes:
       - .MOV
       - .mkv
       - .MKV
+  entities:
+    stimulus: required
+    part: optional
+    annotation: optional
