--- a/src/schema/rules/files/raw/audio.yaml
+++ b/src/schema/rules/files/raw/audio.yaml
@@ -1,16 +1,22 @@
 ---
-suffixes:
-  audio:
-    extensions:
-      - .wav
-      - .WAV
-      - .mp3
-      - .MP3
-      - .ogg
-      - .OGG
-      - .m4a
-      - .M4A
-      - .flac
-      - .FLAC
-      - .acc
-      - .ACC
+audio:
+  suffixes:
+    - audio
+  extensions:
+    - .wav
+    - .WAV
+    - .mp3
+    - .MP3
+    - .ogg
+    - .OGG
+    - .m4a
+    - .M4A
+    - .flac
+    - .FLAC
+    - .acc
+    - .ACC
+  entities:
+    stimulus: required
+    part: optional
+    annotation: optional
+
