--- a/src/schema/rules/files/raw/image.yaml
+++ b/src/schema/rules/files/raw/image.yaml
@@ -1,14 +1,19 @@
 ---
-suffixes:
-  image:
-    extensions:
-      - .jpg
-      - .JPG
-      - .jpeg
-      - .JPEG
-      - .png
-      - .PNG
-      - .gif
-      - .GIF
-      - .webp
-      - .WEBP
+image:
+  suffixes:
+    - image
+  extensions:
+    - .jpg
+    - .JPG
+    - .jpeg
+    - .JPEG
+    - .png
+    - .PNG
+    - .gif
+    - .GIF
+    - .webp
+    - .WEBP
+  entities:
+    stimulus: required
+    part: optional
+    annotation: optional
