--- a/src/schema/rules/sidecars/stimuli.yaml
+++ b/src/schema/rules/sidecars/stimuli.yaml
@@ -8,15 +8,7 @@ Stimulus:
     - suffix == "audiovideo"
     - suffix == "image"
   fields:
-    License:
-      recommended: true
-      description: License under which this stimulus is shared
-    Copyright:
-      recommended: true
-      description: Copyright information for this stimulus
-    URL:
-      optional: true
-      description: Location (origin) for the stimulus file
-    Description:
-      optional: true
-      description: Free-form description of the stimulus
+    StimulusLicense: recommended
+    Copyright: recommended
+    StimulusURL: optional
+    Description: optional
