--- a/src/schema/rules/sidecars/stimuli.yaml
+++ b/src/schema/rules/sidecars/stimuli.yaml
@@ -1,7 +1,7 @@
 # Sidecar tables for stim-<label>_suffix.json, the stimuli.json and annotations.json do not need additional fields
 # as the fields have been already defined in the tabular data
 
-Stimulus:
+Stimuli:
   selectors:
     - suffix == "audio"
     - suffix == "video"
