--- a/.codespellrc
+++ b/.codespellrc
@@ -1,5 +1,6 @@
 [codespell]
-skip = *.js,*.svg,*.eps,.git,node_modules,env,venv,.mypy_cache,package-lock.json,CITATION.cff,tools/new_contributors.tsv,./tools/schemacode/docs/build
+skip = *.js,*.svg,*.eps,.git,node_modules,env,venv,.mypy_cache,package-lock.json,CITATION.cff,tools/new_contributors.tsv,./tools/schemacode/docs/build,venvs
+ignore-regex = \bHEP\b
 ignore-words-list = fo,te,als,Acknowledgements,acknowledgements,weill,bu,winn,manuel
 builtin = clear,rare,en-GB_to_en-US
 # this overloads default dictionaries and I have not yet figured out
