--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -216,8 +216,8 @@ AverageCalibrationError:
   name: AverageCalibrationError
   display_name: Average Calibration Error
   description: |
-    Average calibration error in visual degree. If both eyes recorded, first array
-    corresponds to the left eye and the second to the right eye.
+    Average calibration error in degrees of visual angle. If both eyes recorded, 
+    first array corresponds to the left eye and the second to the right eye.
   type: number
   unit: degree
 B0FieldIdentifier:
@@ -2264,7 +2264,7 @@ MaximalCalibrationError:
   name: MaximalCalibrationError
   display_name: Maximal Calibration Error
   description: |
-    Maximal calibration error in degrees.
+    Maximal calibration error in degrees of visual angle.
   type: number
   unit: degree
 MeasurementToolMetadata:
