feat(schema): Require participants.tsv to be a superset of sub_dirs/participants

--- a/src/schema/rules/checks/dataset.yaml
+++ b/src/schema/rules/checks/dataset.yaml
@@ -24,7 +24,11 @@ ParticipantIDMismatch:
   selectors:
     - path == '/participants.tsv'
   checks:
-    - allequal(sorted(columns.participant_id), sorted(dataset.subjects.sub_dirs))
+    - |
+      allequal(
+        sorted(intersects(columns.participant_id, dataset.subjects.sub_dirs)),
+        sorted(dataset.subjects.sub_dirs)
+      )
 
 # 51
 PhenotypeSubjectsMissing:
@@ -34,10 +38,14 @@ PhenotypeSubjectsMissing:
       A phenotype/ .tsv file lists subjects that were not found in the dataset.
     level: error
   selectors:
-    - path == '/dataset_description.json'
+    - path == '/participants.tsv'
     - type(dataset.subjects.phenotype) != 'null'
   checks:
-    - allequal(sorted(dataset.subjects.phenotype), sorted(dataset.subjects.sub_dirs))
+    - |
+      allequal(
+        sorted(intersects(columns.participant_id, dataset.subjects.phenotype)),
+        sorted(dataset.subjects.phenotype)
+      )
 
 # 214
 SamplesTSVMissing:
