fix: implement association for StimulusPresentation mutation

--- a/src/schema/meta/associations.yaml
+++ b/src/schema/meta/associations.yaml
@@ -90,3 +90,12 @@ coordsystem:
     suffix: coordsystem
     extension: .json
   inherit: true
+
+physio:
+  selectors:
+    - 'task in entities'
+    - extension != '.json'
+  target:
+    suffix: physio
+    extension: .tsv.gz
+  inherit: true
