use template for entity definition

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -82,6 +82,7 @@ repos:
           - click
           - markdown-it-py
           - importlib_resources
+          - jinja2
           - pandas-stubs
           - pyparsing
           - pytest
