Remove TODO for n/a, fix comparison, make it a warning
As @tsalo pointed out in
https://github.com/bids-standard/bids-specification/pull/2075#issuecomment-2695091076
there is a test in expression_tests.yaml which ensures that -1 is less
than n/a

Fix comparison to be >= -- it is a check to pass.

Make it a warning and only on implausible negative (over 60 sec before)
events

Co-authored-by: Chris Markiewicz <effigies@gmail.com>

--- a/src/schema/rules/checks/events.yaml
+++ b/src/schema/rules/checks/events.yaml
@@ -46,13 +46,13 @@ SortedOnsets:
 
 NonNegativeOnsets:
   issue:
-    code: EVENT_ONSET_NONNEGATIVE
+    code: IMPLAUSIBLE_EVENT_ONSET
     message: |
-      The onsets should be positive.
-    level: error
+      Event onsets were found more than 60s before the start of recording, indicated by negative values.
+      If this is not a mistake, remove or consider an alternative method of representing these events.
+    level: warning
   selectors:
     - suffix == "events"
     - extension == ".tsv"
   checks:
-    # TODO: how to handle n/a values?
-    - min(columns.onset) < 0
+    - min(columns.onset) >= -60
