Make check named specifically for negative, and add a positive check at month cut off

--- a/src/schema/rules/checks/events.yaml
+++ b/src/schema/rules/checks/events.yaml
@@ -44,9 +44,9 @@ SortedOnsets:
     # n/a values will likely cause false alarms if encountered. Consider alternatives.
     - allequal(sorted(columns.onset, "numeric"), columns.onset)
 
-NonNegativeOnsets:
+ImplausibleNegativeEventOnset:
   issue:
-    code: IMPLAUSIBLE_EVENT_ONSET
+    code: IMPLAUSIBLE_NEGATIVE_EVENT_ONSET
     message: |
       Event onsets were found more than 60s before the start of recording, indicated by negative values.
       If this is not a mistake, remove or consider an alternative method of representing these events.
@@ -56,3 +56,16 @@ NonNegativeOnsets:
     - extension == ".tsv"
   checks:
     - min(columns.onset) >= -60
+
+ImplausiblePositiveEventOnset:
+  issue:
+    code: IMPLAUSIBLE_POSITIVE_EVENT_ONSET
+    message: |
+      Event onsets were found more than a month after the start of recording.
+      If this is not a mistake, remove or consider an alternative method of representing these events.
+    level: warning
+  selectors:
+    - suffix == "events"
+    - extension == ".tsv"
+  checks:
+    - max(columns.onset) < 2678400
