feat(schema): Add selectors for derivative files

--- a/src/schema/rules/files/deriv/tables.yaml
+++ b/src/schema/rules/files/deriv/tables.yaml
@@ -1,5 +1,7 @@
 ---
 descriptions:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   level: optional
   suffixes:
     - descriptions
