--- a/src/schema/rules/files/deriv/imaging.yaml
+++ b/src/schema/rules/files/deriv/imaging.yaml
@@ -1,5 +1,7 @@
 ---
 anat_parametric_volumetric:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.anat.parametric
   entities:
     $ref: rules.files.raw.anat.parametric.entities
@@ -9,6 +11,8 @@ anat_parametric_volumetric:
     description: optional
 
 anat_nonparametric_volumetric:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.anat.nonparametric
   entities:
     $ref: rules.files.raw.anat.nonparametric.entities
@@ -18,6 +22,8 @@ anat_nonparametric_volumetric:
     description: optional
 
 dwi_volumetric:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.dwi.dwi
   entities:
     $ref: rules.files.raw.dwi.dwi.entities
@@ -27,6 +33,8 @@ dwi_volumetric:
     description: optional
 
 func_volumetric:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.func.func
   entities:
     $ref: rules.files.raw.func.func.entities
@@ -36,6 +44,8 @@ func_volumetric:
     description: optional
 
 anat_parametric_mask:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.anat.parametric
   suffixes:
     - mask
@@ -48,6 +58,8 @@ anat_parametric_mask:
     description: optional
 
 anat_nonparametric_mask:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.anat.nonparametric
   suffixes:
     - mask
@@ -60,6 +72,8 @@ anat_nonparametric_mask:
     description: optional
 
 dwi_mask:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.dwi.dwi
   suffixes:
     - mask
@@ -72,6 +86,8 @@ dwi_mask:
     description: optional
 
 func_mask:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.func.func
   suffixes:
     - mask
@@ -84,6 +100,8 @@ func_mask:
     description: optional
 
 anat_parametric_discrete_segmentation:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.anat.parametric
   suffixes:
     - dseg
@@ -100,6 +118,8 @@ anat_parametric_discrete_segmentation:
     - .tsv
 
 anat_nonparametric_discrete_segmentation:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.anat.nonparametric
   suffixes:
     - dseg
@@ -116,6 +136,8 @@ anat_nonparametric_discrete_segmentation:
     - .tsv
 
 func_discrete_segmentation:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.func.func
   suffixes:
     - dseg
@@ -127,6 +149,8 @@ func_discrete_segmentation:
     description: optional
 
 dwi_discrete_segmentation:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.dwi.dwi
   suffixes:
     - dseg
@@ -138,6 +162,8 @@ dwi_discrete_segmentation:
     description: optional
 
 anat_parametric_probabilistic_segmentation:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.anat.parametric
   suffixes:
     - probseg
@@ -150,6 +176,8 @@ anat_parametric_probabilistic_segmentation:
     description: optional
 
 anat_nonparametric_probabilistic_segmentation:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.anat.nonparametric
   suffixes:
     - probseg
@@ -162,6 +190,8 @@ anat_nonparametric_probabilistic_segmentation:
     description: optional
 
 func_probabilistic_segmentation:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.func.func
   suffixes:
     - probseg
@@ -174,6 +204,8 @@ func_probabilistic_segmentation:
     description: optional
 
 dwi_probabilistic_segmentation:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.dwi.dwi
   suffixes:
     - probseg
@@ -186,6 +218,8 @@ dwi_probabilistic_segmentation:
     description: optional
 
 anat_parametic_discrete_surface:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.anat.parametric
   suffixes:
     - dseg
@@ -203,6 +237,8 @@ anat_parametic_discrete_surface:
     description: optional
 
 anat_nonparametic_discrete_surface:
+  selectors:
+    - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.anat.nonparametric
   suffixes:
     - dseg
