add templates to package"

--- a/tools/schemacode/pyproject.toml
+++ b/tools/schemacode/pyproject.toml
@@ -69,7 +69,8 @@ bidsschematools = [
     "data/schema/BIDS_VERSION",
     "data/schema/SCHEMA_VERSION",
     "data/schema/**/*.yaml",
-    "tests/data/*"
+    "tests/data/*",
+    "render/templates/*"
 ]
 
 [tool.black]
