enh: deep refactor after March 11 meeting

--- a/src/schema/rules/sidecars/derivatives/common_derivatives.yaml
+++ b/src/schema/rules/sidecars/derivatives/common_derivatives.yaml
@@ -84,6 +84,7 @@ AtlasDescription:
     - 'intersects([suffix], ["dseg", "probseg", "mask"])'
   fields:
     Name: required
+    SpatialReference: required
     Description: recommended
     Authors: recommended
     Curators: recommended
